<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_videocontrol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <Button
            android:id="@+id/button_upload_recorded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button_livefeed"
            android:layout_alignRight="@+id/button_livefeed"
            android:onClick="startActivity"
            android:text="@string/button_upload_recorded" />

        <Button
            android:id="@+id/button_livefeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button_privacy"
            android:layout_alignRight="@+id/button_privacy"
            android:layout_below="@id/button_upload_recorded"
            android:onClick="startStreaming"
            android:text="@string/button_livefeed" />

        <Button
            android:id="@+id/button_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_livefeed"
            android:layout_centerHorizontal="true"
            android:onClick="startActivity"
            android:text="@string/button_privacy" />
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/layout_videocontrol"
        android:layout_below="@id/layout_videocontrol"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_border"
        android:padding="5dp" >

        <TextView
            android:id="@+id/label_personalvm_ip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/label_personalvm_ip"
            />

        <EditText
            android:id="@+id/personalvm_ip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/label_personalvm_ip"
            android:layout_below="@+id/label_personalvm_ip"
            android:hint="@string/personalvm_default_ip"            
            android:inputType="phone"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/label_personalvm_restport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/personalvm_ip"
            android:text="@string/label_personalvm_restport"
             />

        <EditText
            android:id="@+id/personalvm_restport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/label_personalvm_restport"
            android:layout_below="@id/label_personalvm_restport"
            android:hint="@string/personalvm_default_restport"
            android:inputType="number"
            android:singleLine="true" />
        
         <TextView
            android:id="@+id/label_personalvm_uploadport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/personalvm_restport"
            android:text="@string/label_personalvm_uploadport"
             />

        <EditText
            android:id="@+id/personalvm_uploadport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/label_personalvm_uploadport"
            android:layout_below="@id/label_personalvm_uploadport"
            android:hint="@string/personalvm_default_uploadport"
            android:inputType="number"
            android:singleLine="true" />
    </RelativeLayout>

</RelativeLayout>